Ensure text remains visible during webfont load
Change 'font-display' to 'swap'
https://web.dev/font-display/

--- a/src/assets/styles/_carbon.scss
+++ b/src/assets/styles/_carbon.scss
@@ -4,6 +4,9 @@
 // Feature flags
 $css--font-face: true;
 $css--plex: true;
+$css--reset: true;
+$css-body: true;
+$carbon--font-display: swap;
 
 // Global styles
 @import '~carbon-components/scss/globals/scss/css--font-face';
